Fixed: wflow-consoleweb - Form - Printed pdf using Ctrl + P or Print button changes the form's element alignment. T4484 @8.1-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/userview8.css
+++ b/wflow-consoleweb/src/main/webapp/css/userview8.css
@@ -1858,6 +1858,10 @@ body #ui-datepicker-div {
     #adminBar #environmentName{
         display: none;
     }
+
+    header.navbar, footer {
+        display: none;
+    }
 }
 
 @media screen and (max-width:680px) {
